manifests/networking/payment-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-gateway-ingress
  namespace: pspd
spec:
  ingressClassName: nginx
  rules:
    - host: api.pspd.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-gateway
                port:
                  number: 8000
