manifests/networking/20-allow-payment-gateway-to-internal-services.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-payment-gateway-to-authorization-service
  namespace: pspd
spec:
  podSelector:
    matchLabels:
      app: authorization-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: payment-gateway
      ports:
        - protocol: TCP
          port: 8081   # targetPort do REST no Autorizador
        - protocol: TCP
          port: 50052  # targetPort do gRPC no Autorizador
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-payment-gateway-to-antifraud-service
  namespace: pspd
spec:
  podSelector:
    matchLabels:
      app: antifraud-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: payment-gateway
      ports:
        - protocol: TCP
          port: 8001   # targetPort do REST no Antifraude
        - protocol: TCP
          port: 50051  # targetPort do gRPC no Antifraude
