manifests/networking/30-allow-frontend-to-payment-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-payment-gateway
  namespace: pspd
spec:
  podSelector:
    matchLabels:
      app: payment-gateway
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8000
